Kinda fixed some word wrapping stuff

--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
 }
 
 .reply-info {
-	width: 200px;
+	width: 200px !important;
 }
 .reply-info-name {
 	font-size: 24px;
@@ -19,8 +19,17 @@
 .reply-info-date {
 	font-size: 14px;
 }
-.thread, .topic, .reply, .breadcrumb {
-	word-break: break-all;
+.thread, .topic, .reply, .breadcrumb,
+.topics-title, .threads-title, .replies-title {
+	word-wrap: break-word !important;
+}
+
+.breakable-button {
+	white-space: normal;
+}
+
+.reply-text {
+	width: calc(100% - 200px);
 }
 
 .topics-title {
